--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Produtos em Destaque</h2>
         <div class="produtos">
             <div class="produto">
-                <img src="/assets/images/Imagem do WhatsApp de 2025-02-03 à(s) 14.29.49_1670cf02.jpg" alt="Tênis">
+                <img src="./assets/images/Imagem do WhatsApp de 2025-02-03 à(s) 14.29.49_1670cf02.jpg" alt="Tênis">
                 <h3>Adidas Fórum</h3>
                 <p>R$ ###,##</p>
                 <a href="#">Adicionar ao Carrinho</a>
@@ -56,7 +56,7 @@
                 <a href="#">Adicionar ao Carrinho</a>
             </div>
             <div class="produto">
-                <img src="/assets/images/Captura de tela 2025-02-03 143909.png" alt="Relógio">
+                <img src="./assets/images/Captura de tela 2025-02-03 143909.png" alt="Relógio">
                 <h3>W29 MAX COM TELA DE 2,1 POLEGADAS</h3>
                 <p>R$ 2.499,99</p>
                 <a href="#">Adicionar ao Carrinho</a>
