--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="carousel">
         <div class="carousel-item" style="background-image: url('./assets/images/Imagem\ do\ WhatsApp\ de\ 2025-02-03\ à\(s\)\ 14.29.49_1670cf02.jpg');">
             <h2>Tênis em Destaque</h2>
-            <a href="#tenis">Veja mais</a>
+            <a href="./tenis.html">Veja mais</a>
         </div>
         <div class="carousel-item" style="background-image: url('./assets/images/Captura\ de\ tela\ 2025-02-03\ 143030.png');">
             <h2>Camisas Exclusivas</h2>
@@ -47,19 +47,19 @@
                 <img src="./assets/images/Imagem do WhatsApp de 2025-02-03 à(s) 14.29.49_1670cf02.jpg" alt="Tênis">
                 <h3>Adidas Fórum</h3>
                 <p>R$ ###,##</p>
-                <a href="#">Adicionar ao Carrinho</a>
+                <a href="#">Ver mais</a>
             </div>
             <div class="produto">
                 <img src="./assets/images/Captura de tela 2025-02-03 143030.png" alt="Camisa">
                 <h3>Camisa John John</h3>
                 <p>R$ ##,##</p>
-                <a href="#">Adicionar ao Carrinho</a>
+                <a href="#">Ver mais</a>
             </div>
             <div class="produto">
                 <img src="./assets/images/Captura de tela 2025-02-03 143909.png" alt="Relógio">
                 <h3>W29 MAX COM TELA DE 2,1 POLEGADAS</h3>
-                <p>R$ 2.499,99</p>
-                <a href="#">Adicionar ao Carrinho</a>
+                <p>R$ ###,##</p>
+                <a href="#">Ver mais</a>
             </div>
         </div>
     </section>
