--- a/tenis.html
+++ b/tenis.html
@@ -53,8 +53,8 @@
         <div class="grid-produtos">
             <!-- Produto 1 -->
             <div class="produto">
-                <img src="tenis1.jpg" alt="Tênis Nike Air Max">
-                <h3>Tênis Nike Air Max</h3>
+                <img src="./assets/images/Imagem do WhatsApp de 2025-02-03 à(s) 14.29.49_1670cf02.jpg" alt="Adidas Fórum">
+                <h3>Adidas Fórum</h3>
                 <p>R$ 599,99</p>
                 <a href="#" class="adicionar-carrinho">Adicionar ao Carrinho</a>
             </div>
