--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ML Importados</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/respondivo.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -57,7 +58,7 @@
             </div>
             <div class="produto">
                 <img src="./assets/images/Captura de tela 2025-02-03 143909.png" alt="Relógio">
-                <h3>W29 MAX COM TELA DE 2,1 POLEGADAS</h3>
+                <h3>W29 MAX - 2,1 POLEGADAS</h3>
                 <p>R$ ###,##</p>
                 <a href="#">Ver mais</a>
             </div>
