--- a/index.html
+++ b/index.html
@@ -25,20 +25,27 @@
     </header>
 
     <!-- Carrossel de Produtos -->
-    <section class="carousel">
-        <div class="carousel-item" style="background-image: url('./assets/images/Imagem\ do\ WhatsApp\ de\ 2025-02-03\ à\(s\)\ 14.29.49_1670cf02.jpg');">
-            <h2>Tênis em Destaque</h2>
-            <a href="./tenis.html">Veja mais</a>
+    <section class="carrossel-container">
+        <div class="carrossel" id="carrossel1">
+          <div class="carrossel-foto ativo" style="background-image: url('./assets/images/carousel/tenis/carousel-\ \(1\).jpg');"></div>
+          <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/tenis/carousel-\ \(2\).jpg');"></div>
+          <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/tenis/carousel-\ \(3\).jpg');"></div>
+          <a href="">teste</a>
         </div>
-        <div class="carousel-item" style="background-image: url('./assets/images/Captura\ de\ tela\ 2025-02-03\ 143030.png');">
-            <h2>Camisas Exclusivas</h2>
-            <a href="#camisas">Veja mais</a>
+    
+        <div class="carrossel" id="carrossel2">
+          <div class="carrossel-foto ativo" style="background-image: url('./assets/images/carousel/camisa/carouse-\ \(1\).png');"></div>
+          <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/camisa/carouse-\ \(2\).png');"></div>
+          <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/camisa/carouse-\ \(3\).png');"></div>
+          <a href="">teste</a>
         </div>
-        <div class="carousel-item" style="background-image: url('./assets/images/Captura\ de\ tela\ 2025-02-03\ 143909.png');">
-            <h2>Relógios Elegantes</h2>
-            <a href="#relogios">Veja mais</a>
+    
+        <div class="carrossel" id="carrossel3">
+          <div class="carrossel-foto ativo" style="background-image: url('./assets/images/carousel/relogio/carosell-\ \(1\).jpg');"></div>
+          <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/relogio/carosell-\ \(1\).png');"></div>
+          <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/relogio/carosell-\ \(2\).jpg');"></div>
         </div>
-    </section>
+      </section>
 
     <!-- Produtos em Destaque -->
     <section class="destaques">
@@ -64,13 +71,12 @@
             </div>
         </div>
     </section>
-
+    <script src="./assets/script/script.js"></script>
     <!-- Rodapé -->
     <footer>
         <p>&copy; 2025 ML Importados. Todos os direitos reservados.</p>
         <p><a href="#">Política de Privacidade</a> | <a href="#">Termos de Serviço</a></p>
     </footer>
 
-    <script src="./src/script/script.js"></script>
 </body>
 </html>
