--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Cabeçalho -->
     <header>
         <div class="logo">
-            <img src="logo.png" alt="ML Importados">
+            <img src="./assets/images/logo-ml.png" alt="ML Importados">
         </div>
         <nav>
             <ul>
@@ -30,14 +30,12 @@
           <div class="carrossel-foto ativo" style="background-image: url('./assets/images/carousel/tenis/carousel-\ \(1\).jpg');"></div>
           <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/tenis/carousel-\ \(2\).jpg');"></div>
           <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/tenis/carousel-\ \(3\).jpg');"></div>
-          <a href="">teste</a>
         </div>
     
         <div class="carrossel" id="carrossel2">
           <div class="carrossel-foto ativo" style="background-image: url('./assets/images/carousel/camisa/carouse-\ \(1\).png');"></div>
           <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/camisa/carouse-\ \(2\).png');"></div>
           <div class="carrossel-foto" style="background-image: url('./assets/images/carousel/camisa/carouse-\ \(3\).png');"></div>
-          <a href="">teste</a>
         </div>
     
         <div class="carrossel" id="carrossel3">
