--- a/tenis.html
+++ b/tenis.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tênis - ML Importados</title>
-    <link rel="stylesheet" href="./assets/css/tenis.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <!-- Cabeçalho -->
     <header>
         <div class="logo">
-            <img src="logo.png" alt="ML Importados">
+            <img src="./assets/images/logo-ml.png" alt="ML Importados">
         </div>
         <nav>
             <ul>
@@ -24,11 +24,11 @@
     </header>
 
     <!-- Lista de Tênis -->
-    <section class="produtos">
+    <section class="tenis">
         <h2>Todos os Tênis</h2>
-        <div class="grid-produtos">
+        <div class="grid-tenis">
             <!-- Produto 1 -->
-            <div class="produto">
+            <div class="tenis">
                 <img src="./assets/images/Imagem do WhatsApp de 2025-02-03 à(s) 14.29.49_1670cf02.jpg" alt="Adidas Fórum">
                 <h3>Adidas Fórum</h3>
                 <p>R$ ###,##</p>
@@ -36,7 +36,7 @@
             </div>
 
             <!-- Produto 2 -->
-            <div class="produto">
+            <div class="tenis">
                 <img src="./assets/images/Imagem do WhatsApp de 2025-02-03 à(s) 14.30.47_c0a9db8c.jpg" alt="Nike Air Forc *Premium Couro">
                 <h3>Nike Air Forc *Premium Couro</h3>
                 <p>R$ ###,##</p>
@@ -44,13 +44,20 @@
             </div>
 
             <!-- Produto 3 -->
-            <div class="produto">
+            <div class="tenis">
                 <img src="./assets/images/Imagem do WhatsApp de 2025-02-03 à(s) 14.29.02_e0934842.jpg" alt="Tênis Puma Suede">
                 <h3>All Star Vulcanizado</h3>
                 <p>R$ ###,##</p>
                 <a href="#" class="saiba-mais">Saiba mais</a>
             </div>
 
+            <!-- Produto 4 -->
+            <div class="tenis">
+                <img src="./assets/images/Imagem do WhatsApp de 2025-02-03 à(s) 14.29.02_e0934842.jpg" alt="Tênis Puma Suede">
+                <h3>All Star Vulcanizado</h3>
+                <p>R$ ###,##</p>
+                <a href="#" class="saiba-mais">Saiba mais</a>
+            </div>
         
         </div>
       
